[gd_scene load_steps=3 format=3 uid="uid://dxkv2jg5vi4xx"]

[ext_resource type="Script" path="res://Scripts/Campaign/campaign_ui.gd" id="1_m73j6"]
[ext_resource type="Script" path="res://Scripts/Campaign/ArmiesContainer.gd" id="2_hbtxh"]

[node name="CampaingUI" type="CanvasLayer"]
script = ExtResource("1_m73j6")

[node name="Container" type="Control" parent="."]
z_index = 1000
z_as_relative = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="GoldLabel" type="Label" parent="Container"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 21.0
offset_top = 14.0
offset_right = 67.0
offset_bottom = 40.0
text = "Gold: "

[node name="ManpowerLabel" type="Label" parent="Container"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 151.0
offset_top = 13.0
offset_right = 191.0
offset_bottom = 36.0
text = "Manpower:"

[node name="Province" type="Panel" parent="Container"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 19.0
offset_top = 431.0
offset_right = 387.0
offset_bottom = 578.0

[node name="IncomeLabel" type="Label" parent="Container/Province"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 199.0
offset_top = 32.0
offset_right = 257.0
offset_bottom = 58.0
text = "Income"

[node name="PopulationLabel" type="Label" parent="Container/Province"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 27.0
offset_top = 31.0
offset_right = 112.0
offset_bottom = 57.0
text = "Population"

[node name="NameLabel" type="Label" parent="Container/Province"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 11.0
offset_right = 170.0
offset_bottom = 26.0
text = "Name"

[node name="ArmiesContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
offset_left = 4.0
offset_top = 121.0
offset_right = 241.0
offset_bottom = 239.0
mouse_filter = 0
script = ExtResource("2_hbtxh")

[node name="Title" type="Label" parent="ArmiesContainer"]
layout_mode = 2
text = "ARMIES
"

[node name="Button" type="Button" parent="ArmiesContainer"]
layout_mode = 2
text = "TESTBUTTON "

[node name="VBoxContainer" type="VBoxContainer" parent="ArmiesContainer"]
layout_mode = 2

[node name="TotalLabel" type="Label" parent="ArmiesContainer"]
layout_mode = 2
text = "Total:"

[connection signal="pressed" from="ArmiesContainer/Button" to="." method="_on_button_pressed"]
